--- a/Education.html
+++ b/Education.html
@@ -163,7 +163,7 @@
                 <h2>Academic Background</h2>
                 <!-- University of Massachusetts Amherst -->
                 <div class="edu-box">
-                    <h3><a href="https://www.umass.edu/" target="_blank">University of Massachusetts Amherst</a></h3>
+                    <h3><a href="https://www.umass.edu/" target="_blank">University of Massachusetts Amherst <i class="fas fa-external-link-alt"></i></a></h3>
                     <p><strong>Master of Science in Data Analytics and Computational Social Science (DACSS)</strong><br>
                     September 2024 - May 2026 (expected)<br>
                     GPA: 4.00/4.00<br><br>
@@ -198,7 +198,7 @@
 
                 <!-- Sardar Vallabhbhai National Institute of Technology -->
                 <div class="edu-box">
-                    <h3><a href="https://www.svnit.ac.in/" target="_blank">Sardar Vallabhbhai National Institute of Technology</a></h3>
+                    <h3><a href="https://www.svnit.ac.in/" target="_blank">Sardar Vallabhbhai National Institute of Technology <i class="fas fa-external-link-alt"></i></a></h3>
                     <p><strong>Integrated 5-year Master of Science in Mathematics</strong><br>
                     August 2019 - June 2024<br>
                     GPA: 8.26/10 (3.54/4.00)<br><br>
@@ -253,7 +253,7 @@
             <section id="honors" style="display: none;">
                 <h2>Honors and Awards</h2>
                 <div class="edu-box">
-                    <h3><a href="https://drive.google.com/file/d/1iAAkqGrdCfCbWJO0enL0U4JR4l3AM6vZ/view?usp=sharing" target="_blank">Swissnex ThinkSwiss Research Scholarships</a></h3>
+                    <h3><a href="https://drive.google.com/file/d/1iAAkqGrdCfCbWJO0enL0U4JR4l3AM6vZ/view?usp=sharing" target="_blank">Swissnex ThinkSwiss Research Scholarships <i class="fas fa-external-link-alt"></i></a></h3>
                     Received Swissnex ThinkSwiss Research Scholarships: Asia-Pacific of worth USD 4,500 to conduct research work at IDSIA, USI-SUPSI, Switzerland.<br>
                     May 2023</p>
                 </div>
