--- a/IIMA_Linear_Optimization.html
+++ b/IIMA_Linear_Optimization.html
@@ -167,22 +167,13 @@
                 <p style="text-align: center;" class="project-description">This project explores 16 real-life optimization problems, modeling them mathematically and solving them using CBC and CPLEX solvers via AMPL software and Python's PuLP library.</p>
                 <div class="button-container">
                     <a href="https://github.com/suryam1504/IIMA-Linear-Integer-Optimization-using-Python-PuLP-and-AMPL" target="_blank" class="button">GitHub</a>
-                    <a href="mailto:suryamgupta12345@gmail.com" class="button">Contact Me</a>
+                    <!--<a href="mailto:suryamgupta12345@gmail.com" class="button">Contact Me</a>-->
                 </div>
             </header>
 
-            <!-- Linear Optimization Problems Section -->
-            <section id="linear-optimization-problems">
-                <h2>Linear Optimization Problems</h2>
-                <p>The merged PDF of all the problems can be viewed here. Preview the report below or download it.</p>
-                <div class="pdf-wrapper">
-                    <iframe src="assets/pdf/Linear Optimization Problems.pdf"></iframe>
-                </div>
-            </section>
-
             <!-- 16 Problems Individually Section -->
             <section id="problems-individually">
-                <h2><br>16 Problems Individually</h2>
+                <h2><br>16 Problems</h2>
                 <ol>
                     <li><a href="https://drive.google.com/file/d/1XGwbsR0aWLtVt2ODMmPXsn2km5WAm0oX/view?usp=sharing" target="_blank">Bluesky - Bluesky Airlines Problem PDF</a>&nbsp&nbsp&nbsp&nbsp&nbsp             
                     <a href="https://drive.google.com/file/d/1GVsbi964yaRbUkiDBg4Kv9dQbxqKxTOA/view?usp=sharing" target="_blank">Bluesky - 1-2 Bluesky Afterclass PDF</a> </li>
@@ -207,10 +198,21 @@
                 </ol>
             </section>
 
+            <!-- Linear Optimization Problems Section -->
+            <section id="linear-optimization-problems">
+                <h2>Linear Optimization Problems Combined</h2>
+                <p>The merged PDF of all the problems can be viewed here. Preview the report below or download it.</p>
+                <div class="pdf-wrapper">
+                    <iframe src="assets/pdf/Linear Optimization Problems.pdf"></iframe>
+                </div>
+            </section>
+
             <!-- Academic Integrity Notice Section -->
             <section id="academic-integrity">
                 <h2>Academic Integrity Notice</h2>
-                <p>I am unable to share the Python and AMPL codes for these optimization problems as they are part of the Indian Institute of Management (IIMA) curriculum. Uploading them online would violate academic integrity policies. For further information about these problems, please contact me directly.</p>
+                <p>I am unable to share the Python and AMPL codes for these optimization problems as they are part of the Indian Institute of Management (IIMA) 
+                    curriculum. Uploading them online would violate academic integrity policies. For further information about these problems, 
+                    please <a href="mailto:suryamgupta12345@gmaail.com"> contact me</a> directly.</p>
             </section>
 
             <!-- Footer -->
