--- a/Research_Publications.html
+++ b/Research_Publications.html
@@ -93,7 +93,7 @@
                 <li><strong>Mitrović, S., Frisone, F., Gupta, S., Lucifora, C., Čarapić, D., Schillaci, C., ... & Singh, A.</strong> (2023, December). 
                     <em>Annotating Panic in Social Media using Active Learning, Transformers and Domain Knowledge</em>. In <em>2023 IEEE International 
                         Conference on Data Mining Workshops (ICDMW)</em> (pp. 1269-1278). IEEE. <br>
-                        <a href="https://ieeexplore.ieee.org/abstract/document/10411628" target="_blank">Link to Publication</a></li>
+                        <a href="https://ieeexplore.ieee.org/abstract/document/10411628" target="_blank">Link to Publication <i class="fas fa-external-link-alt"></i></a></li>
             </ul>
 
             <!-- Placeholder for Future Publications -->
