--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 									<div class="content">
 										<header>
 											<h2>Hello there! <br>
-											I’m Suryam Gupta</h2>
+											I’m Suryam Gupta <br>
+											<font color="#f56a6a">Data Scientist Aspirant</font></h2>	
 										</header>
 										<p> I am currently a Master's student in Data Analytics and Computational Social Science (DACSS) at the University of Massachusetts 
 											Amherst. I am intrigued by Data Science and the concept of finding meaningful insights and underlying patterns from data and 
@@ -67,7 +68,7 @@
 										<img src="images/Suryam photo cropped.jpg" alt="" width="100" height="auto" />
 									</span>-->
 									<span class="image object">
-										<img src="images/Suryam photo cropped.jpg" alt="" style="width: 400px; height: auto;" />
+										<img src="images/Suryam photo cropped.jpg" alt="" style="width: 400px; height: 480px;" />
 									</span>
 								</section>
 
@@ -202,11 +203,11 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="resume.html" target="_blank">Resume</a></li>
+										<li><a href="resume.html">Resume</a></li>
 										<li><a href="#skills-tools">Skills and Tools</a></li>
 										<li><a href="#all-projects">Projects</a></li>
 										<li><a href="Research_Publications.html">Research Publications</a></li>
-										<li><a href="Education.html" target="_blank">Education</a></li>
+										<li><a href="Education.html">Education</a></li>
 										<!--<li><a href="elements.html">Elements</a></li>-->
 
 										<!-- <li>
