corrected photo ratio

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 										<p> I am currently a Master's student in Data Analytics and Computational Social Science (DACSS) at the University of Massachusetts 
 											Amherst. I am intrigued by Data Science and the concept of finding meaningful insights and underlying patterns from data and 
 											building predictive models. I am also into Competitive Programming as I love coding, developing logic to solve problems, and 
-											using Data Structures and Algorithms to make time and space-efficient programs. I have previously worked with various Machine 
-											Learning and Natural Language Processing (NLP) projects, and I continue to explore and learn various tools and skills.<br><br>
-											I am currently integrating LangChain to develop LLM-powered applications, including conversational agents, retrieval-augmented 
-											generation (RAG) pipelines, and automated reasoning systems.<br><br>
+											using Data Structures and Algorithms to make time and space-efficient programs. I have previously worked with various <strong><font color="#f56a6a">Machine 
+											Learning</font></strong> and <strong><font color="#f56a6a">Natural Language Processing (NLP)</font></strong> projects, and I continue to explore and learn various tools and skills.<br><br>
+											I am currently integrating <strong><font color="#f56a6a">LangChain</font></strong> to develop <strong><font color="#f56a6a">LLM-based applications</font></strong>, including conversational agents, <strong><font color="#f56a6a">retrieval-augmented 
+											generation (RAG)</font></strong> pipelines, and automated reasoning systems.<br><br>
 										Other things I enjoy: Watching movies and TV shows, Traveling, Playing chess, Reading books, and Playing guitar
 										<br></p>
 										<!-- <ul class="actions">
@@ -284,14 +284,14 @@
 												suryamgupta12345@gmail.com  <!--web crawler protection hehe-->
 											</a>
 										</li>
-										<li class="icon solid fa-phone">+1 (413) 510-7695</li>
+										<li class="icon solid fa-phone"><a href="tel:+1 (413) 510-7695">+1 (413) 510-7695</a></li>
 										<li class="icon brands fa-linkedin">
 											<a href="https://www.linkedin.com/in/suryamgupta/" target="_blank">linkedin.com/in/suryamgupta</a>
 										</li>
 										<li class="icon brands fa-github">
 											<a href="https://github.com/suryam1504" target="_blank">github.com/suryam1504</a>
 										</li>
-										<li class="icon solid fa-home">165 Brittany Manor Drive<br>Amherst, MA 01002</li>
+										<li class="icon solid fa-home">Amherst, MA</li>
 									</ul>
 									
 								</section>
