correct photo ratio

--- a/Credit_Card_FD_proj.html
+++ b/Credit_Card_FD_proj.html
@@ -150,8 +150,8 @@
                 <h1 style="text-align: center;">Credit Card Default Detection</h1>
                 <p style="text-align: center;" class="project-description">This study predicts credit card defaults using mathematical and statistical tools in Python, analyzing a large dataset to support financial risk assessment.</p>
                 <div class="button-container">
-                    <a href="#" target="_blank" class="button">Code on GitHub</a>
-                    <a href="#" target="_blank" class="button">Full Report</a>
+                    <a href="#" target="_blank" class="button">GitHub</a>
+                    <a href="#" target="_blank" class="button">Detailed Report</a>
                 </div>
             </header>
 
