--- a/DACSS603_proj.html
+++ b/DACSS603_proj.html
@@ -127,7 +127,7 @@
             <h1 style="text-align: center;">A Causal Inference Analysis of Parental Education and Study Time on Academic Success</h1>
             <p style="text-align: center;" class="project-description">An inferential analysis on how a student's academic (study-time) and demographic (father's and mother's education level) factors (individually) affect their school performance.</p>
             <div class="button-container">
-                <a href="https://github.com/suryam1504/A-Causal-Inference-Analysis-of-Parental-Education-and-Study-Time-on-Academic-Success" target="_blank" class="button">Code on GitHub</a>
+                <a href="https://github.com/suryam1504/A-Causal-Inference-Analysis-of-Parental-Education-and-Study-Time-on-Academic-Success" target="_blank" class="button">GitHub</a>
                 <a href="DACSS603_report.html" target="_blank" class="button">Detailed Report</a>
             </div>
         </header>
