--- a/DACSS758_proj.html
+++ b/DACSS758_proj.html
@@ -108,10 +108,10 @@
         <div class="container">
 		<!-- Header Section -->
         <header>
-            <h1 style="text-align: center;">Decoding Review Impact: A Study on Sentiment, Length, and Readability in Movie Reviews</h1>
+            <h1 style="text-align: center;">A Study on Sentiment, Length, and Readability in Movie Reviews</h1>
             <p style="text-align: center;" class="project-description">This study analyzes how textual metrics such as Sentiment Polarity, Review Length, and Readability Score affect user engagement in Amazon Movie Reviews.</p>
             <div class="button-container">
-                <a href="https://github.com/suryam1504/A-Study-on-Sentiment-Length-and-Readability-in-Movie-Reviews" target="_blank" class="button">Code on GitHub</a>
+                <a href="https://github.com/suryam1504/A-Study-on-Sentiment-Length-and-Readability-in-Movie-Reviews" target="_blank" class="button">GitHub</a>
                 <a href="DACSS758_report.html" target="_blank" class="button">Detailed Report</a>
             </div>
         </header>
