--- a/IDSIA_Biomedical_Texts.html
+++ b/IDSIA_Biomedical_Texts.html
@@ -187,8 +187,8 @@
             <h1 style="text-align: center;">Evaluating Psychometric Features and Contextual Embeddings for Mental Disorder Classification</h1>
             <p style="text-align: center;" class="project-description">This study assesses the potential of psychometric features and contextual embeddings to classify mental disorders (anxiety, panic, depression) in short biomedical texts from social media, using machine learning and deep learning models.</p>
             <div class="button-container">
-                <a href="https://github.com/suryam1504/Masters-Thesis-Evaluating-Psychometric-Features-and-Contextual-Embeddings-in-Biomedical-Texts" target="_blank" class="button">Code on GitHub</a>
-                <a href="IDSIA_Bio_Texts_Thesis_report.html" target="_blank" class="button">Full Report</a>
+                <a href="https://github.com/suryam1504/Masters-Thesis-Evaluating-Psychometric-Features-and-Contextual-Embeddings-in-Biomedical-Texts" target="_blank" class="button">GitHub</a>
+                <a href="IDSIA_Bio_Texts_Thesis_report.html" target="_blank" class="button">Detailed Report</a>
             </div>
         </header>
 
