--- a/IIMN_Amazon_Review_NLP.html
+++ b/IIMN_Amazon_Review_NLP.html
@@ -150,8 +150,8 @@
                 <h1 style="text-align: center;">Analyzing Amazon Reviews, Textual Metrics, and User’s Perceived Helpfulness</h1>
                 <p style="text-align: center;" class="project-description">This study analyzes factors influencing review helpfulness using the Amazon Review/Product Dataset, focusing on Cell Phones and Accessories and Video Games categories with advanced text analysis and modeling techniques.</p>
                 <div class="button-container">
-                    <a href="https://github.com/suryam1504/IIMN-Analyzing-Amazon-Reviews-Textual-Metrics-and-Users-Perceived-Helpfulness" target="_blank" class="button">Code on GitHub</a>
-                    <a href="IIMN_Amazon_Review_NLP_Report.html" target="_blank" class="button">Full Report</a>
+                    <a href="https://github.com/suryam1504/IIMN-Analyzing-Amazon-Reviews-Textual-Metrics-and-Users-Perceived-Helpfulness" target="_blank" class="button">GitHub</a>
+                    <a href="IIMN_Amazon_Review_NLP_Report.html" target="_blank" class="button">Detailed Report</a>
                 </div>
             </header>
 
