--- a/IIMN_Amazon_Review_NLP_Report.html
+++ b/IIMN_Amazon_Review_NLP_Report.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-    	<title>Full Report - Analyzing Amazon Reviews, Textual Metrics, and User’s Perceived Helpfulness</title>
+    	<title>Analyzing Amazon Reviews, Textual Metrics, and User’s Perceived Helpfulness</title>
     	<meta charset="utf-8" />
     	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     	<link rel="stylesheet" href="assets/css/main.css" />
@@ -39,7 +39,7 @@
         </style>
     </head>
 	<body>
-        <h1><br>Full Report: Analyzing Amazon Reviews, Textual Metrics, and User’s Perceived Helpfulness</h1>
+        <h1><br>Analyzing Amazon Reviews, Textual Metrics, and User’s Perceived Helpfulness</h1>
         <p>Preview the report below or download it.</p>
         <iframe src="assets\pdf\IIMN_Final_Report.pdf" width="100%" height="600px"></iframe>
 	</body>
