--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 											Learning</font></strong> and <strong><font color="#f56a6a">Natural Language Processing (NLP)</font></strong> projects, and I continue to explore and learn various tools and skills.<br><br>
 											I am currently integrating <strong><font color="#f56a6a">LangChain</font></strong> to develop <strong><font color="#f56a6a">LLM-based applications</font></strong>, including conversational agents, <strong><font color="#f56a6a">retrieval-augmented 
 											generation (RAG)</font></strong> pipelines, and automated reasoning systems.<br><br>
-										Other things I enjoy: Watching movies and TV shows, Traveling, Playing chess, Reading books, and Playing guitar
+										Other things I enjoy: Watching movies and TV shows, traveling, playing chess, reading (fictional) books, and playing guitar
 										<br></p>
 										<!-- <ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
