--- a/Credit_Card_FD_report.html
+++ b/Credit_Card_FD_report.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-    	<title>Full Report - Credit Card Fraud Detection</title>
+    	<title>Credit Card Fraud Detection</title>
     	<meta charset="utf-8" />
     	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     	<link rel="stylesheet" href="assets/css/main.css" />
@@ -39,7 +39,7 @@
         </style>
     </head>
 	<body>
-        <h1><br>Full Report: Credit Card Fraud Detection</h1>
+        <h1><br>Credit Card Fraud Detection</h1>
         <p>Preview the report below or download it.</p>
         <iframe src="assets\pdf/Bachelor Thesis Final Report sem 6.pdf" width="100%" height="600px"></iframe>
         <!--<a href="assets\pdf\TAD24 - Decoding Review Impact_ A Study on Sentiment, Length, and Readability in Movie Reviews - Suryam Gupta.pdf" class="button" download>Download Report</a>-->
