--- a/DACSS758_report.html
+++ b/DACSS758_report.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-    	<title>Full Report - A Study on Sentiment, Length, and Readability in Movie Reviews</title>
+    	<title>A Study on Sentiment, Length, and Readability in Movie Reviews</title>
     	<meta charset="utf-8" />
     	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     	<link rel="stylesheet" href="assets/css/main.css" />
@@ -39,7 +39,7 @@
         </style>
     </head>
 	<body>
-        <h1><br>Full Report: A Study on Sentiment, Length, and Readability in Movie Reviews</h1>
+        <h1><br>A Study on Sentiment, Length, and Readability in Movie Reviews</h1>
         <p>Preview the report below or download it.</p>
         <iframe src="assets\pdf\TAD24 - Decoding Review Impact_ A Study on Sentiment, Length, and Readability in Movie Reviews - Suryam Gupta.pdf" width="100%" height="600px"></iframe>
         <!--<a href="assets\pdf\TAD24 - Decoding Review Impact_ A Study on Sentiment, Length, and Readability in Movie Reviews - Suryam Gupta.pdf" class="button" download>Download Report</a>-->
